--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
         <h1>Welcome to My Website</h1>  
-        <p>This is my new website which is hosted on GitHub Pages!</p>
+        <p>This page is currently under construction. Please check back later for updates.</p>
     </main>
   </body>
 </html>
